--- a/custom_components/bambu_lab/translations/el.json
+++ b/custom_components/bambu_lab/translations/el.json
@@ -472,6 +472,21 @@
           },
           "type": {
             "name": "Τύπος"
+          },
+          "remain": {
+            "name": "Παραμένοντας νήμα"
+          },
+          "remain_enabled": {
+            "name": "Ενεργοποιημένη η εκτίμηση των παραμέτρων νήματος"
+          },
+          "tag_uid": {
+            "name": "Σειριακός αριθμός καρούλι"
+          },
+          "filament_id": {
+            "name": "Αναγνωριστικό νήματος"
+          },
+          "tray_weight": {
+            "name": "Μέγιστο βάρος νήματος"
           }
         }
       },
@@ -510,6 +525,12 @@
           },
           "remain_enabled": {
             "name": "Ενεργοποιημένη η εκτίμηση των παραμέτρων νήματος"
+          },
+          "filament_id": {
+            "name": "Αναγνωριστικό νήματος"
+          },
+          "tray_weight": {
+            "name": "Μέγιστο βάρος νήματος"
           }
         }
       },
@@ -545,6 +566,15 @@
           },
           "type": {
             "name": "Τύπος"
+          },
+          "filament_id": {
+            "name": "Αναγνωριστικό νήματος"
+          },
+          "tray_weight": {
+            "name": "Μέγιστο βάρος νήματος"
+          },
+          "remain_enabled": {
+            "name": "Ενεργοποιημένη η εκτίμηση των παραμέτρων νήματος"
           }
         }
       },
@@ -580,6 +610,15 @@
           },
           "type": {
             "name": "Τύπος"
+          },
+          "filament_id": {
+            "name": "Αναγνωριστικό νήματος"
+          },
+          "tray_weight": {
+            "name": "Μέγιστο βάρος νήματος"
+          },
+          "remain_enabled": {
+            "name": "Ενεργοποιημένη η εκτίμηση των παραμέτρων νήματος"
           }
         }
       },
@@ -615,6 +654,15 @@
           },
           "type": {
             "name": "Τύπος"
+          },
+          "filament_id": {
+            "name": "Αναγνωριστικό νήματος"
+          },
+          "tray_weight": {
+            "name": "Μέγιστο βάρος νήματος"
+          },
+          "remain_enabled": {
+            "name": "Ενεργοποιημένη η εκτίμηση των παραμέτρων νήματος"
           }
         }
       },
@@ -626,6 +674,9 @@
       },
       "skipped_objects": {
         "name": "Παραλείποντα αντικείμενα"
+      },
+      "gcode_file_downloaded": {
+        "name": "Λήψη αρχείου GCODE"
       }
     },
     "camera": {
@@ -651,6 +702,9 @@
       },
       "timelapse": {
         "name": "Φορτώστε το τελευταίο χρονοδιάγραμμα από τον εκτυπωτή"
+      },
+      "download_gcode_file": {
+        "name": "Αποθηκεύστε το αρχείο gcode στο ha"
       }
     },
     "update": {
@@ -665,6 +719,12 @@
         "bambu": "Σύννεφο Bambu Lab",
         "lan": "Lan Mode"
       }
+    }
+  },
+  "issues": {
+    "authentication_failed": {
+      "title": "Ο έλεγχος ταυτότητας απέτυχε για {device}",
+      "description": "Η προσπάθεια σύνδεσης στο εργαστήριο Bambu απέτυχε. Παρακαλείσθε να επαναπροσδιορίσετε την ενσωμάτωση και να δώσετε νέα διαπιστευτήρια."
     }
   }
 }
