--- a/custom_components/bambu_lab/translations/fr.json
+++ b/custom_components/bambu_lab/translations/fr.json
@@ -472,6 +472,21 @@
           },
           "type": {
             "name": "Type"
+          },
+          "remain": {
+            "name": "Filament restant"
+          },
+          "remain_enabled": {
+            "name": "Estimation du filament restant activée"
+          },
+          "tag_uid": {
+            "name": "Numéro de série Spool"
+          },
+          "filament_id": {
+            "name": "ID de filament"
+          },
+          "tray_weight": {
+            "name": "Poids maximum de filament"
           }
         }
       },
@@ -510,6 +525,12 @@
           },
           "remain_enabled": {
             "name": "Estimation du filament restant activée"
+          },
+          "filament_id": {
+            "name": "ID de filament"
+          },
+          "tray_weight": {
+            "name": "Poids maximum de filament"
           }
         }
       },
@@ -545,6 +566,15 @@
           },
           "type": {
             "name": "Type"
+          },
+          "filament_id": {
+            "name": "ID de filament"
+          },
+          "tray_weight": {
+            "name": "Poids maximum de filament"
+          },
+          "remain_enabled": {
+            "name": "Estimation du filament restant activée"
           }
         }
       },
@@ -580,6 +610,15 @@
           },
           "type": {
             "name": "Type"
+          },
+          "filament_id": {
+            "name": "ID de filament"
+          },
+          "tray_weight": {
+            "name": "Poids maximum de filament"
+          },
+          "remain_enabled": {
+            "name": "Estimation du filament restant activée"
           }
         }
       },
@@ -615,6 +654,15 @@
           },
           "type": {
             "name": "Type"
+          },
+          "filament_id": {
+            "name": "ID de filament"
+          },
+          "tray_weight": {
+            "name": "Poids maximum de filament"
+          },
+          "remain_enabled": {
+            "name": "Estimation du filament restant activée"
           }
         }
       },
@@ -626,6 +674,9 @@
       },
       "skipped_objects": {
         "name": "Objets sautés"
+      },
+      "gcode_file_downloaded": {
+        "name": "Fichier gcode téléchargé"
       }
     },
     "camera": {
@@ -651,6 +702,9 @@
       },
       "timelapse": {
         "name": "Chargez le dernier timelapse de l'imprimante"
+      },
+      "download_gcode_file": {
+        "name": "Enregistrer le fichier gcode dans ha"
       }
     },
     "update": {
@@ -665,6 +719,12 @@
         "bambu": "Nuage Bambu Lab",
         "lan": "Mode réseau"
       }
+    }
+  },
+  "issues": {
+    "authentication_failed": {
+      "title": "L'authentification a échoué pour {device}",
+      "description": "Tenter de se connecter au laboratoire Bambu a échoué. Veuillez reconfigurer l'intégration et fournir de nouvelles références."
     }
   }
 }
