--- a/custom_components/bambu_lab/translations/th.json
+++ b/custom_components/bambu_lab/translations/th.json
@@ -481,6 +481,21 @@
           },
           "type": {
             "name": "พิมพ์"
+          },
+          "remain": {
+            "name": "เส้นใยที่เหลืออยู่"
+          },
+          "remain_enabled": {
+            "name": "เปิดใช้งานการประมาณค่าเส้นใยที่เหลืออยู่"
+          },
+          "tag_uid": {
+            "name": "หมายเลขซีเรียล"
+          },
+          "filament_id": {
+            "name": "รหัสเส้นใย"
+          },
+          "tray_weight": {
+            "name": "น้ำหนักสูงสุดของเส้นใย"
           }
         }
       },
@@ -519,6 +534,12 @@
           },
           "remain_enabled": {
             "name": "เปิดใช้งานการประมาณเส้นใยที่เหลืออยู่"
+          },
+          "filament_id": {
+            "name": "รหัสเส้นใย"
+          },
+          "tray_weight": {
+            "name": "น้ำหนักสูงสุดของเส้นใย"
           }
         }
       },
@@ -554,6 +575,15 @@
           },
           "type": {
             "name": "พิมพ์"
+          },
+          "filament_id": {
+            "name": "รหัสเส้นใย"
+          },
+          "tray_weight": {
+            "name": "น้ำหนักสูงสุดของเส้นใย"
+          },
+          "remain_enabled": {
+            "name": "เปิดใช้งานการประมาณค่าเส้นใยที่เหลืออยู่"
           }
         }
       },
@@ -589,6 +619,15 @@
           },
           "type": {
             "name": "พิมพ์"
+          },
+          "filament_id": {
+            "name": "รหัสเส้นใย"
+          },
+          "tray_weight": {
+            "name": "น้ำหนักสูงสุดของเส้นใย"
+          },
+          "remain_enabled": {
+            "name": "เปิดใช้งานการประมาณค่าเส้นใยที่เหลืออยู่"
           }
         }
       },
@@ -624,8 +663,20 @@
           },
           "type": {
             "name": "พิมพ์"
+          },
+          "filament_id": {
+            "name": "รหัสเส้นใย"
+          },
+          "tray_weight": {
+            "name": "น้ำหนักสูงสุดของเส้นใย"
+          },
+          "remain_enabled": {
+            "name": "เปิดใช้งานการประมาณค่าเส้นใยที่เหลืออยู่"
           }
         }
+      },
+      "gcode_file_downloaded": {
+        "name": "ดาวน์โหลดไฟล์ gcode"
       }
     },
     "camera": {
@@ -651,6 +702,9 @@
       },
       "timelapse": {
         "name": "โหลด Timelapse ล่าสุดจากเครื่องพิมพ์"
+      },
+      "download_gcode_file": {
+        "name": "บันทึกไฟล์ gcode ใน HA"
       }
     },
     "update": {
@@ -665,6 +719,12 @@
         "bambu": "Bambu Lab Cloud",
         "lan": "โหมด LAN"
       }
+    }
+  },
+  "issues": {
+    "authentication_failed": {
+      "title": "การรับรองความถูกต้องล้มเหลวสำหรับ {device}",
+      "description": "พยายามเชื่อมต่อกับ Bambu Lab ล้มเหลว โปรดกำหนดค่าการรวมใหม่และให้ข้อมูลรับรองใหม่"
     }
   }
 }
