--- a/custom_components/bambu_lab/translations/da.json
+++ b/custom_components/bambu_lab/translations/da.json
@@ -472,6 +472,21 @@
           },
           "type": {
             "name": "Type"
+          },
+          "remain": {
+            "name": "Resterende glødetråd"
+          },
+          "remain_enabled": {
+            "name": "Resterende filamentestimering aktiveret"
+          },
+          "tag_uid": {
+            "name": "Spole serienummer"
+          },
+          "filament_id": {
+            "name": "Filament ID"
+          },
+          "tray_weight": {
+            "name": "Maksimal vægt af glødetråd"
           }
         }
       },
@@ -510,6 +525,12 @@
           },
           "remain_enabled": {
             "name": "Resterende filamentestimering aktiveret"
+          },
+          "filament_id": {
+            "name": "Filament ID"
+          },
+          "tray_weight": {
+            "name": "Maksimal vægt af glødetråd"
           }
         }
       },
@@ -545,6 +566,15 @@
           },
           "type": {
             "name": "Type"
+          },
+          "filament_id": {
+            "name": "Filament ID"
+          },
+          "tray_weight": {
+            "name": "Maksimal vægt af glødetråd"
+          },
+          "remain_enabled": {
+            "name": "Resterende filamentestimering aktiveret"
           }
         }
       },
@@ -580,6 +610,15 @@
           },
           "type": {
             "name": "Type"
+          },
+          "filament_id": {
+            "name": "Filament ID"
+          },
+          "tray_weight": {
+            "name": "Maksimal vægt af glødetråd"
+          },
+          "remain_enabled": {
+            "name": "Resterende filamentestimering aktiveret"
           }
         }
       },
@@ -615,6 +654,15 @@
           },
           "type": {
             "name": "Type"
+          },
+          "filament_id": {
+            "name": "Filament ID"
+          },
+          "tray_weight": {
+            "name": "Maksimal vægt af glødetråd"
+          },
+          "remain_enabled": {
+            "name": "Resterende filamentestimering aktiveret"
           }
         }
       },
@@ -626,6 +674,9 @@
       },
       "skipped_objects": {
         "name": "Springede objekter"
+      },
+      "gcode_file_downloaded": {
+        "name": "Gcode -fil downloadet"
       }
     },
     "camera": {
@@ -651,6 +702,9 @@
       },
       "timelapse": {
         "name": "Indlæs den seneste tidslap fra printer"
+      },
+      "download_gcode_file": {
+        "name": "Gem gcode -fil i ha"
       }
     },
     "update": {
@@ -665,6 +719,12 @@
         "bambu": "Bambu Lab sky",
         "lan": "Lan-tilstand"
       }
+    }
+  },
+  "issues": {
+    "authentication_failed": {
+      "title": "Autentificering mislykkedes for {device}",
+      "description": "Forsøg på at oprette forbindelse til Bambu Lab mislykkedes. Konfigurer integrationen igen og giver friske legitimationsoplysninger."
     }
   }
 }
