--- a/custom_components/bambu_lab/translations/de.json
+++ b/custom_components/bambu_lab/translations/de.json
@@ -380,6 +380,9 @@
       "gcode_file": {
         "name": "Gcode Dateiname"
       },
+      "gcode_file_downloaded": {
+        "name": "Gcode Dateiname heruntergeladen"
+      },
       "print_bed_type": {
         "name": "Druckbett Typ",
         "state": {
@@ -472,6 +475,21 @@
           },
           "type": {
             "name": "Typ"
+          },
+          "remain": {
+            "name": "Verbleibendes Filament"
+          },
+          "remain_enabled": {
+            "name": "Verbleibende Filamentschätzung aktiviert"
+          },
+          "tag_uid": {
+            "name": "Spulen -Seriennummer"
+          },
+          "filament_id": {
+            "name": "Filament -ID"
+          },
+          "tray_weight": {
+            "name": "Maximales Filamentgewicht"
           }
         }
       },
@@ -510,6 +528,12 @@
           },
           "remain_enabled": {
             "name": "Verbleibende Filamentschätzung aktiviert"
+          },
+          "filament_id": {
+            "name": "Filament -ID"
+          },
+          "tray_weight": {
+            "name": "Maximales Filamentgewicht"
           }
         }
       },
@@ -545,6 +569,15 @@
           },
           "type": {
             "name": "Typ"
+          },
+          "filament_id": {
+            "name": "Filament -ID"
+          },
+          "tray_weight": {
+            "name": "Maximales Filamentgewicht"
+          },
+          "remain_enabled": {
+            "name": "Verbleibende Filamentschätzung aktiviert"
           }
         }
       },
@@ -580,6 +613,15 @@
           },
           "type": {
             "name": "Typ"
+          },
+          "filament_id": {
+            "name": "Filament -ID"
+          },
+          "tray_weight": {
+            "name": "Maximales Filamentgewicht"
+          },
+          "remain_enabled": {
+            "name": "Verbleibende Filamentschätzung aktiviert"
           }
         }
       },
@@ -615,6 +657,15 @@
           },
           "type": {
             "name": "Typ"
+          },
+          "filament_id": {
+            "name": "Filament -ID"
+          },
+          "tray_weight": {
+            "name": "Maximales Filamentgewicht"
+          },
+          "remain_enabled": {
+            "name": "Verbleibende Filamentschätzung aktiviert"
           }
         }
       },
@@ -651,6 +702,9 @@
       },
       "timelapse": {
         "name": "Laden Sie den neuesten Zeitplan aus dem Drucker"
+      },
+      "download_gcode_file": {
+        "name": "GCode Datei in HA speichern"
       }
     },
     "update": {
@@ -665,6 +719,12 @@
         "bambu": "Bambu Lab-Cloud",
         "lan": "LAN-Modus"
       }
+    }
+  },
+  "issues": {
+    "authentication_failed": {
+      "title": "Authentifizierung fehlgeschlagen für {device}",
+      "description": "Der Versuch, eine Verbindung zum Bambu -Labor herzustellen, schlug fehl. Bitte konfigurieren Sie die Integration und stellen Sie neue Anmeldeinformationen an."
     }
   }
 }
