--- a/custom_components/bambu_lab/translations/zh-Hans.json
+++ b/custom_components/bambu_lab/translations/zh-Hans.json
@@ -472,6 +472,21 @@
           },
           "type": {
             "name": "类型"
+          },
+          "remain": {
+            "name": "剩余的细丝"
+          },
+          "remain_enabled": {
+            "name": "启用了剩余的细丝估计"
+          },
+          "tag_uid": {
+            "name": "线轴序列号"
+          },
+          "filament_id": {
+            "name": "细丝ID"
+          },
+          "tray_weight": {
+            "name": "丝的最大重量"
           }
         }
       },
@@ -510,6 +525,12 @@
           },
           "remain_enabled": {
             "name": "启用了剩余的细丝估计"
+          },
+          "filament_id": {
+            "name": "细丝ID"
+          },
+          "tray_weight": {
+            "name": "丝的最大重量"
           }
         }
       },
@@ -545,6 +566,15 @@
           },
           "type": {
             "name": "类型"
+          },
+          "filament_id": {
+            "name": "细丝ID"
+          },
+          "tray_weight": {
+            "name": "丝的最大重量"
+          },
+          "remain_enabled": {
+            "name": "启用了剩余的细丝估计"
           }
         }
       },
@@ -580,6 +610,15 @@
           },
           "type": {
             "name": "类型"
+          },
+          "filament_id": {
+            "name": "细丝ID"
+          },
+          "tray_weight": {
+            "name": "丝的最大重量"
+          },
+          "remain_enabled": {
+            "name": "启用了剩余的细丝估计"
           }
         }
       },
@@ -615,6 +654,15 @@
           },
           "type": {
             "name": "类型"
+          },
+          "filament_id": {
+            "name": "细丝ID"
+          },
+          "tray_weight": {
+            "name": "丝的最大重量"
+          },
+          "remain_enabled": {
+            "name": "启用了剩余的细丝估计"
           }
         }
       },
@@ -626,6 +674,9 @@
       },
       "skipped_objects": {
         "name": "跳过对象"
+      },
+      "gcode_file_downloaded": {
+        "name": "GCODE文件下载"
       }
     },
     "camera": {
@@ -651,6 +702,9 @@
       },
       "timelapse": {
         "name": "从打印机加载最新的时间段"
+      },
+      "download_gcode_file": {
+        "name": "将GCODE文件保存在HA中"
       }
     },
     "update": {
@@ -665,6 +719,12 @@
         "bambu": "Bambu实验室云",
         "lan": "局域网模式"
       }
+    }
+  },
+  "issues": {
+    "authentication_failed": {
+      "title": "{device}的身份验证失败",
+      "description": "试图连接到BAMBU实验室失败。请重新配置集成并提供新的凭据。"
     }
   }
 }
