--- a/custom_components/midea_ac/translations/en.json
+++ b/custom_components/midea_ac/translations/en.json
@@ -14,7 +14,7 @@
           "host": "Host",
           "country_code": "Cloud Region"
         },
-        "data_description":{
+        "data_description": {
           "country_code": "Select closest country to your location."
         }
       },
@@ -31,15 +31,24 @@
           "token": "Token for V3 devices",
           "k1": "Key for V3 devices"
         }
+      },
+      "show_token_key": {
+        "description": "Save this token and key for future use.\nAll input on this form is discarded.",
+        "data": {
+          "id": "ID",
+          "token": "Token",
+          "k1": "Key"
+        }
       }
     },
     "abort": {
       "already_configured": "The device has already been configured.",
-      "cannot_connect": "A connection could not be made.",
+      "cannot_connect": "Device connection could not be made.",
+      "cloud_connection_failed": "Cloud connection could not be made.",
       "no_devices_found": "No supported devices found on the network."
     },
     "error": {
-      "cannot_connect": "A connection could not be made with these settings.",
+      "cannot_connect": "Device connection could not be made with these settings.",
       "device_not_found": "Device not found on the network.",
       "unsupported_device": "Device is not supported."
     }
@@ -62,7 +71,7 @@
           "temp_step": "Step size for temperature set point",
           "fan_speed_step": "Step size for custom fan speeds",
           "additional_operation_modes": "Specify additional operational modes",
-          "max_connection_lifetime": "Maximum time in seconds a connection will be used (30 second minimum)"
+          "max_connection_lifetime": "Maximum time in seconds a connection will be used (15 second minimum)"
         }
       }
     }
