--- a/custom_components/openai_tts/translations/de.json
+++ b/custom_components/openai_tts/translations/de.json
@@ -2,23 +2,33 @@
   "config": {
     "step": {
       "user": {
-        "title": "Füge eine Text zu Sprache Engine hinzu",
-        "description": "Gib Konfigurationsdaten ein. Schau in die Dokumentation für weitere Informationen.",
+        "title": "Text-to-Speech Engine hinzufügen",
+        "description": "Weitere Informationen finden Sie in der Dokumentation.",
         "data": {
-          "api_key": "Gib den OpenAI API Schlüssel ein.",
-          "speed": "Gib die Geschwindigkeit der Sprache ein",
-          "model": "Wähle das zu verwendende Modell.",
-          "voice": "Wähle eine Stimme.",
-          "url": "Gib den OpenAI-kompatiblen Endpunkt ein. Optional kann eine Portnummer angegeben werden."
+          "api_key": "Geben Sie den OpenAI API-Schlüssel ein",
+          "speed": "Geschwindigkeit (0,25 bis 4,0, wobei 1,0 Standard ist)",
+          "model": "Modell",
+          "voice": "Stimme",
+          "url": "Geben Sie einen OpenAI-kompatiblen Endpunkt ein (optional können Sie eine Portnummer angeben)."
         }
       }
     },
     "error": {
-      "wrong_api_key": "Ungültiger API Schlüssel. Bitte gib einen gültigen API Schlüssel ein.",
-      "already_configured": "Diese Stimme und Endpunkt sind bereits konfiguriert."
-    },
-    "abort": {
-      "already_configured": "Diese Stimme und Endpunkt sind bereits konfiguriert."
+      "wrong_api_key": "Ungültiger API-Schlüssel. Bitte geben Sie einen gültigen API-Schlüssel ein."
+    }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "Konfigurieren Sie die TTS-Optionen",
+        "data": {
+          "chime": "Aktivieren Sie den Signalton vor der Sprache (nützlich für Ansagen)",
+          "chime_sound": "Signalton",
+          "speed": "Geschwindigkeit (0,25 bis 4,0)",
+          "voice": "Stimme",
+          "normalize_audio": "Aktivieren Sie die Lautstärkeerhöhung für das erzeugte Audio (verwendet mehr CPU)"
+        }
+      }
     }
   }
 }
